Corrected gap errors for responsive design

--- a/style.css
+++ b/style.css
@@ -6,18 +6,21 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background: #ECEAE4;
+    background: #FFFFFF;
 }
 
 .app {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     /* vertical scrollbar only visible when necessary */
     overflow-x: hidden;
     overflow-y: auto;
     color: #333333;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: stretch;
 }
 
 header {
@@ -42,11 +45,11 @@ h1 {
     text-align: center;
     font-family: "Roboto", sans-serif;
     font-weight: 600;
-    padding: 1.5em;
+    padding: 1.5em 0;
     font-size: 1em;
     font-style: normal;
-    margin-bottom: 10px;
     width: 100%;
+    margin: 0;
     background: #ECEAE4; 
 }
 
@@ -55,26 +58,29 @@ h1 {
     background: #82999E;
     display: flex;
     justify-content: center;
-    height: 70px;
+    flex-direction: column;
+    min-height: 70px;
 }
 
 .turns {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
+    max-height: 50px;
 }
 
 .advanceDiv {
     background:#A6B8BA;
     width: 100%;
-    height: 70px;
+    min-height: 70px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .move {
     background:#F7F7F7;
-    margin: 10px;
+    margin-left: calc(50% - 30px);
 }
 
 button {
@@ -93,8 +99,8 @@ button:hover {
 
 .turns button {
     margin: 10px 0;
-    width: 87px;
-    text-align: left;
+    max-width: 87px;
+    text-align: center;
 }
 
 .game {
@@ -163,4 +169,10 @@ footer {
     }
 
    
+}
+
+@media screen and (min-width: 800px) {
+    .turns{
+        margin-left: calc(50% - 400px);
+    }
 }
